--- a/UiBank RPA Process/GetNegativeBallanceAcounts.xaml
+++ b/UiBank RPA Process/GetNegativeBallanceAcounts.xaml
@@ -5,7 +5,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>883,2070</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1115,2063</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetNegativeBallanceAcounts_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="24">
@@ -58,7 +58,7 @@
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GetNegativeBallanceAcounts" sap:VirtualizedContainerService.HintSize="563,1905" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GetNegativeBallanceAcounts" sap:VirtualizedContainerService.HintSize="563,1898" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="baseUrl" />
       <Variable x:TypeArguments="x:Int32" Name="statusCode" />
@@ -76,12 +76,12 @@
         <x:Boolean x:Key="IsPinned">False</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:GetRobotAsset TimeoutMS="{x:Null}" AssetName="UiBank_Endpoint" DisplayName="Get Endpoint" sap:VirtualizedContainerService.HintSize="521,22" sap2010:WorkflowViewState.IdRef="GetRobotAsset_1">
+    <ui:GetRobotAsset TimeoutMS="{x:Null}" AssetName="UiBank API Endpoint" DisplayName="Get Endpoint" sap:VirtualizedContainerService.HintSize="521,22" sap2010:WorkflowViewState.IdRef="GetRobotAsset_1">
       <ui:GetRobotAsset.Value>
         <OutArgument x:TypeArguments="x:String">[baseUrl]</OutArgument>
       </ui:GetRobotAsset.Value>
     </ui:GetRobotAsset>
-    <Switch x:TypeArguments="x:String" DisplayName="Switch" Expression="[baseUrl]" sap:VirtualizedContainerService.HintSize="521,141" sap2010:WorkflowViewState.IdRef="Switch`1_2">
+    <Switch x:TypeArguments="x:String" DisplayName="Switch" Expression="[baseUrl]" sap:VirtualizedContainerService.HintSize="521,138" sap2010:WorkflowViewState.IdRef="Switch`1_2">
       <Switch.Default>
         <Assign sap:VirtualizedContainerService.HintSize="262,61.3333333333333" sap2010:WorkflowViewState.IdRef="Assign_3">
           <Assign.To>
@@ -103,7 +103,7 @@
         </Assign.Value>
       </Assign>
     </Switch>
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="521,62" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[baseUrl]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="521,61" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[baseUrl]" />
     <ui:HttpClient Body="{x:Null}" ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseHeaders="{x:Null}" Username="{x:Null}" AcceptFormat="JSON" BodyFormat="application/json" ClientCertificate="[Nothing]" ClientCertificatePassword="[Nothing]" DisplayName="Login Request" EndPoint="[baseUrl + &quot;/users/login&quot;]" sap:VirtualizedContainerService.HintSize="521,22" sap2010:WorkflowViewState.IdRef="HttpClient_3" Method="POST" Result="[loginResult]" StatusCode="[loginStatusCode]" TimeoutMS="6000">
       <ui:HttpClient.Attachments>
         <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
@@ -123,7 +123,7 @@
       </ui:HttpClient.UrlSegments>
     </ui:HttpClient>
     <ui:DeserializeJson x:TypeArguments="njl:JObject" DisplayName="Deserialize JSON" sap:VirtualizedContainerService.HintSize="521,60" sap2010:WorkflowViewState.IdRef="DeserializeJson`1_5" JsonObject="[loginObj]" JsonString="[loginResult]" />
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="521,62" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[&quot;Login Status Code&quot; + loginStatusCode.ToString + Environment.NewLine + &quot;Login Object: &quot; + loginObj.ToString]" />
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="521,61" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[&quot;Login Status Code&quot; + loginStatusCode.ToString + Environment.NewLine + &quot;Login Object: &quot; + loginObj.ToString]" />
     <ui:HttpClient Body="{x:Null}" ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseHeaders="{x:Null}" Username="{x:Null}" AcceptFormat="JSON" BodyFormat="application/xml" ClientCertificate="[Nothing]" ClientCertificatePassword="[Nothing]" DisplayName="Get Negative Accounts request" EndPoint="[baseUrl + &quot;/accounts&quot;]" sap:VirtualizedContainerService.HintSize="521,22" sap2010:WorkflowViewState.IdRef="HttpClient_2" Method="GET" Result="[result]" StatusCode="[statusCode]" TimeoutMS="6000">
       <ui:HttpClient.Attachments>
         <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
@@ -141,7 +141,7 @@
         <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
       </ui:HttpClient.UrlSegments>
     </ui:HttpClient>
-    <If Condition="[statusCode = 200]" sap:VirtualizedContainerService.HintSize="521,1142" sap2010:WorkflowViewState.IdRef="If_1">
+    <If Condition="[statusCode = 200]" sap:VirtualizedContainerService.HintSize="521,1140" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Then>
         <Sequence sap:VirtualizedContainerService.HintSize="376,992" sap2010:WorkflowViewState.IdRef="Sequence_2">
           <Sequence.Variables>
